Fix overflow on variation mode'

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,27 @@ DarkGrey rgb(227,226,226)
   /* border: solid blue 1px; */
 }
 
+/* html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+} */
+
 html {
   /* height: 100%; */
   /* width: 100%; */
@@ -33,9 +54,10 @@ body {
 main {
   grid-column: 2;
   display: grid;
-  grid-template-rows: 30% 70%;
+  grid-template-rows: 25% 75%;
   grid-template-columns: 100%;
   background-color: rgb(192,192,192);
+  overflow-y: hidden;
   /* background-color: rgb(34,34,34); */
 }
 
@@ -99,10 +121,23 @@ header {
 }
 
 .title {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
   height: 50%;
   width:90%;
   background-color: rgb(221,73,87);
   border: 4px solid rgb(34,34,34);
+}
+
+.title > * {
+  margin: 0;
+  font-size: 120%;
+}
+
+.title > h1 {
+  font-size: 160%;
 }
 
 .player-side,
@@ -152,7 +187,7 @@ figure {
 
 img {
   width: 90%;
-  height: 90%;
+  height: 84%;
   border-radius: 5%;
   box-shadow: 5px 10px 18px #26222D;
 }
@@ -160,11 +195,25 @@ img {
 div {
   border: 4px solid rgb(34,34,34);
   margin: 6%;
+  height: 30%;
+  width: 80%;
+}
+
+div > * {
+  /* margin: 5%; */
+}
+
+div > h2 {
+  font-size: 140%;
+}
+
+fiv > h3 {
+  font-size:
 }
 
 img:hover {
-  width: 100%;
-  height: 100%;
+  width: 90%;
+  height: 90%;
   cursor: pointer;
 }
 
